--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,54 +3,54 @@ body {
   font-size: 150%;
 }
 
-a {
-  color: #ffffff;
-  text-decoration: none;
-  
+h1 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+color: rgb(55, 78, 151);
 }
 
+a {
+  position:absolute;
+  top: 10px;
+  right: 10px;
+  margin: 10px;
+  font-size: 100%;
+  background-color: #ac5852;
+  padding: 2px ;
+  color: rgb(0, 0, 0);
+}
+  
+
 a:hover {
-  color: #9ba570;
+  color: #b9cbda;
 }
 
 button {
-  display: inline-block;
-  margin: 20px;
+  display:inline-block;
+  margin: 50px;
   font-size: 100%;
-  background-color: #bfd16e;
-  border-radius: 10px;
-  padding: 1px 10px;
+  background-color: #96bed4;
+  padding: 2px ;
   color: rgb(0, 0, 0);
-  border: 0;
 }
 
 button:hover {
-  background-color: #74a570;
+  background-color: #cbd8db;
 }
 
-.selections button {
-  display: block;
-}
+.clock {
+  margin: 10px;
+  font-size: 100%;
+  color: rgb(0, 0, 0);
+  }
+
 
 input[type="text"] {
   font-size: 100%;
 }
 
-ol {
-  padding-left: 0px;
-  max-height: 400px;
-  overflow: auto;
-}
-
-li {
-  padding: 5px;
- 
-}
-
-
-.box {
-  margin: 100px;
-  max-width: 600px;
+p, h2 {
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+color: rgb(50, 25, 78);
 }
 
 .hidden {
@@ -61,28 +61,19 @@ li {
   text-align: center;
 }
 
-.score {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-
-.scorelist {
-  font-style:normal;
-  font-size: 100%;
-  margin-top: 10px;
-  padding-top: 10px;
-  color: rgb(206, 102, 102);
-  border-top: 1px solid rgb(0, 0, 0);
-}
-
-.clock {
-  display: inline-block;
+#topscores{
+  display:inline;
   margin: 20px;
   font-size: 100%;
-  background-color: #bfd16e;
-  border-radius: 10px;
-  padding: 1px 10px;
-  color: rgb(0, 0, 0);
-  border: 0;
-  }
+  padding: 2px 10px;
+  color: rgb(104, 47, 47);
+}
+
+#scorelist{
+  display:inline;
+  margin: 20px;
+  font-size: 100%;
+  padding: 2px 10px;
+  color: rgb(104, 47, 47);
+}
+
