--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,12 +11,14 @@ color: rgb(55, 78, 151);
 a {
   position:absolute;
   top: 10px;
-  right: 10px;
-  margin: 10px;
+  right: 50px;
+  margin: 0px;
   font-size: 100%;
-  background-color: #ac5852;
+  background-color: #dd9793;
   padding: 2px ;
   color: rgb(0, 0, 0);
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 150%;
 }
   
 
@@ -25,11 +27,11 @@ a:hover {
 }
 
 button {
-  display:inline-block;
+  display:inline;
   margin: 50px;
-  font-size: 100%;
+  font-size: 150%;
   background-color: #96bed4;
-  padding: 2px ;
+  padding: 5px ;
   color: rgb(0, 0, 0);
 }
 
@@ -39,9 +41,8 @@ button:hover {
 
 .clock {
   margin: 10px;
-  font-size: 100%;
-  color: rgb(0, 0, 0);
-  }
+  font-size: 150%;
+ }
 
 
 input[type="text"] {
