--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,12 +9,13 @@ color: rgb(55, 78, 151);
 }
 
 a {
-  position:absolute;
+  flex-direction: column;
+  position: absolute;
+  background-color: #b97569;
   top: 10px;
-  right: 50px;
+  left: 80%;
   margin: 0px;
   font-size: 100%;
-  background-color: #dd9793;
   padding: 2px ;
   color: rgb(0, 0, 0);
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -27,7 +28,7 @@ a:hover {
 }
 
 button {
-  display:inline;
+  flex-direction: row;
   margin: 50px;
   font-size: 150%;
   background-color: #96bed4;
@@ -80,7 +81,7 @@ color: rgb(50, 25, 78);
 
 @media screen and (max-width: 768px) {
   button,
-  a, img {
+  img {
     flex-direction: column;
   }
 }
