--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,8 +9,9 @@ color: rgb(55, 78, 151);
 }
 
 a {
-  flex-direction: column;
+  flex-direction:row;
   position: absolute;
+  display: inline;
   background-color: #b97569;
   top: 10px;
   left: 80%;
@@ -29,6 +30,7 @@ a:hover {
 
 button {
   flex-direction: row;
+  display: inline;
   margin: 50px;
   font-size: 150%;
   background-color: #96bed4;
@@ -64,7 +66,8 @@ color: rgb(50, 25, 78);
 }
 
 #topscores{
-  display:inline;
+  
+  
   margin: 20px;
   font-size: 100%;
   padding: 2px 10px;
@@ -72,7 +75,8 @@ color: rgb(50, 25, 78);
 }
 
 #scorelist{
-  display:inline;
+  
+  
   margin: 20px;
   font-size: 100%;
   padding: 2px 10px;
