--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,8 +10,7 @@ color: rgb(55, 78, 151);
 
 a {
   flex-direction:row;
-  position: absolute;
-  display: inline;
+  position: relative;
   background-color: #b97569;
   top: 10px;
   left: 80%;
@@ -30,7 +29,6 @@ a:hover {
 
 button {
   flex-direction: row;
-  display: inline;
   margin: 50px;
   font-size: 150%;
   background-color: #96bed4;
@@ -66,8 +64,6 @@ color: rgb(50, 25, 78);
 }
 
 #topscores{
-  
-  
   margin: 20px;
   font-size: 100%;
   padding: 2px 10px;
@@ -75,8 +71,6 @@ color: rgb(50, 25, 78);
 }
 
 #scorelist{
-  
-  
   margin: 20px;
   font-size: 100%;
   padding: 2px 10px;
@@ -84,7 +78,7 @@ color: rgb(50, 25, 78);
 }
 
 @media screen and (max-width: 768px) {
-  button,
+  h2, button,
   img {
     flex-direction: column;
   }
