--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,16 +10,13 @@ color: rgb(55, 78, 151);
 
 a {
   flex-direction:row;
-  position: relative;
-  background-color: #b97569;
-  top: 10px;
-  left: 80%;
   margin: 0px;
   font-size: 100%;
   padding: 2px ;
-  color: rgb(0, 0, 0);
+  color: rgb(167, 68, 68);
+  text-decoration: underline;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 150%;
+  
 }
   
 
@@ -78,7 +75,7 @@ color: rgb(50, 25, 78);
 }
 
 @media screen and (max-width: 768px) {
-  h2, button,
+  button,
   img {
     flex-direction: column;
   }
